plugins/editorconfig/testData/org/editorconfig/language/parser/valid/twoSections.editorconfig
[*.java]
hello=world

[*.foo]
this=that

