plugins/editorconfig/testData/org/editorconfig/language/parser/invalid/valueWithoutKey.editorconfig
[*.java]
=value2
key3=value3
